buttons on parsing interface broke line on smaller screen.  Reset min-width property.  Current line/next line were not populating correctly.  algorithm fixed to load correct col+line number.

--- a/web/css/newberryTransSkin.css
+++ b/web/css/newberryTransSkin.css
@@ -476,6 +476,7 @@ body{
     text-align: center;
     line-height: 35px;
     font-size: 10pt;
+    min-width: 165px;
 }
 
 #ctrlColumns, #ctrlLines, .tpenButton{
